checkbox better styling - if there is a help bubble it is now correctly aligned

--- a/static/sass/screen.sass
+++ b/static/sass/screen.sass
@@ -161,7 +161,7 @@ body, html
 label
   display: inline-block
   font-weight: bold
-  width: 10em
+  width: 11em
 
 input, textarea, select
   background-color: $background-color
@@ -171,10 +171,19 @@ input, textarea, select
   box-sizing: content-box
   -moz-box-sizing: content-box
 
-input[type=checkbox]
-  margin: 0px 0px 0px 142px
-  width: 15px
-  height: 15px
+#page
+  div.checkbox-wrapper
+    display: inline-block
+    font-size: 12px
+    width: 25em
+    margin: 0px
+    padding: 0px 14px 0px 0px
+
+    input
+      margin: 0px 0px 0px 142px
+      width: 15px
+      height: 15px
+
 .wizard-form, .config-form
   div
     padding: 0.25em 0
